Description: Dashboard alignment changes. Changelog : NA. Bug ID: NA Reviewed By: self

--- a/technical/src/web/splive/src/app/shared/layouts/app-layout/breadcrumbs/breadcrumbs.component.css
+++ b/technical/src/web/splive/src/app/shared/layouts/app-layout/breadcrumbs/breadcrumbs.component.css
@@ -7,7 +7,6 @@
 #right-icon{padding: 0px 10px}
 #bread-crumb-links {
     float: left;
-    margin-top: 4px !important;
     width: 100%;
 }
 #bread-crumb-links li {
